# Makefile for documentation
# Copyright (C) 2004 Greg Franks <greg@sce.carleton.ca>
#
# ------------------------------------------------------------------------
# $Id: Makefile.am 9228 2010-03-03 15:57:42Z greg $
# ------------------------------------------------------------------------

SUBDIRS = tutorial userman
