# Process this file with autoconf to produce a configure script.
#
# ------------------------------------------------------------------------
# $Id: configure.ac 13996 2020-10-24 22:01:20Z greg $
# ------------------------------------------------------------------------
AC_INIT(lqns, 5.19, greg@sce.carleton.ca)
AM_INIT_AUTOMAKE
AC_CONFIG_FILES([Makefile tutorial/Makefile tutorial/model/Makefile tutorial/pseudo-tasks/Makefile tutorial/calls/Makefile tutorial/activity-templ/Makefile tutorial/web-server/Makefile userman/Makefile userman/model/Makefile userman/bookstore/Makefile userman/srvn-schema/Makefile userman/timing-diagrams/Makefile userman/replication/Makefile userman/xml-schema/Makefile])
AC_OUTPUT

