# -*- Makefile -*-
# $HeadURL: http://rads-svn.sce.carleton.ca:8080/svn/lqn/trunk/libmva/Makefile.am $
# $Id: Makefile.am 14307 2020-12-31 15:54:48Z greg $
# ------------------------------------------------------------------------
ACLOCAL_AMFLAGS=-I ../config
AUTOMAKE_OPTIONS = foreign
SUBDIRS = src regression
