# -*- Makefile -*-
# $HeadURL: http://rads-svn.sce.carleton.ca:8080/svn/lqn/trunk/lqiolib/Makefile.am $
# $Id: Makefile.am 9712 2010-07-13 13:34:43Z greg $
# ------------------------------------------------------------------------
ACLOCAL_AMFLAGS=-I ../config
AUTOMAKE_OPTIONS = foreign
SUBDIRS = src
